[package]
name = "gig_gibbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gig_gibbs_rs"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
rand = "0.8"
rand_distr = "0.4"
